# pitboss

./: .envrc  .gitignore  CHANGELOG.md  README.md  cabal.project  flake.nix  pitboss.cabal  treefmt.nix
app/: Main.hs
data/strategy/: baseline.txt  bja-basic.txt
nix/: coverage.nix
src/Pitboss/: Blackjack.hs  Causality.hs  Event.hs  FSM.hs  Offering.hs  Simulation.hs  State.hs  Trace.hs  World.hs
src/Pitboss/Agency/: Types.hs
src/Pitboss/Agency/Archetype/: Dealer.hs  Example.hs  Player.hs  Types.hs
src/Pitboss/Agency/Dealer/: Archetype.hs
src/Pitboss/Agency/Intent/: Generate.hs  Types.hs
src/Pitboss/Agency/Player/: Archetype.hs
src/Pitboss/Archetype/: Dealer.hs  Player.hs
src/Pitboss/Blackjack/: Action.hs  Actions.hs  Card.hs  Chips.hs  Deck.hs  Events.hs  Hand.hs  Offering.hs  Outcome.hs  Outcomes.hs  Play.hs  Rules.hs  Strategy.hs  Table.hs  Types.hs  WellKnown.hs
src/Pitboss/Blackjack/BasicStrategy/: Chart.hs  Types.hs
src/Pitboss/Blackjack/FSM/: Hand.hs  Round.hs
src/Pitboss/Blackjack/Hand/: Analysis.hs  Category.hs  Operations.hs  Score.hs  Scoring.hs  Types.hs
src/Pitboss/Blackjack/Materia/: Card.hs  Chips.hs  Deck.hs  Hand.hs  Types.hs
src/Pitboss/Blackjack/Offering/: Materia.hs  Matter.hs  RuleSet.hs  WellKnown.hs
src/Pitboss/Blackjack/Rules/: Bout.hs  Dealer.hs  Game.hs  Hand.hs  Offering.hs  Table.hs  Validate.hs
src/Pitboss/Blackjack/Strategy/: Chart.hs  MultiDimensional.hs  Types.hs
src/Pitboss/Blackjack/Types/: Core.hs  GameRuleSet.hs  Hand.hs  Index.hs  Offering.hs  Table.hs
src/Pitboss/Causality/: Registry.hs  TickCache.hs  Timeline.hs  Trace.hs  Validate.hs
src/Pitboss/Causality/Delta/: Incremental.hs  IncrementalPart.hs  Reversible.hs  Types.hs
src/Pitboss/Causality/Entity/: Decomposable.hs  Lenses.hs  Replaceable.hs  Types.hs  Witnessable.hs
src/Pitboss/Causality/Timeline/: Query.hs  Reconstruction.hs
src/Pitboss/Causality/Trace/: Ops.hs  Registrable.hs  Types.hs
src/Pitboss/Causality/Types/: Core.hs  FiniteMap.hs
src/Pitboss/FSM/: Bout.hs  Dealer.hs  DealerHand.hs  DealerHandFSM.hs  DealerRound.hs  DealerRoundFSM.hs  DealerTable.hs  DealerTableFSM.hs  Hand.hs  Player.hs  PlayerHand.hs  PlayerHandFSM.hs  PlayerSpot.hs  PlayerSpotFSM.hs  PlayerTable.hs  PlayerTableFSM.hs  Round.hs  Table.hs  Transitionable.hs  Types.hs
src/Pitboss/FSM/Bout/: FSM.hs  Phase.hs  Transition.hs
src/Pitboss/FSM/Contestant/: Bout.hs  Hand.hs  Round.hs
src/Pitboss/FSM/Dealer/: Hand.hs  Round.hs  Table.hs
src/Pitboss/FSM/DealerHand/: FSM.hs  Phase.hs  Transition.hs
src/Pitboss/FSM/DealerHandFSM/: Existential.hs  FSM.hs  JSON.hs  Laws.hs  Phase.hs  Transition.hs  Transitions.hs  Types.hs
src/Pitboss/FSM/DealerRound/: ENHC.hs  Peek.hs  Phase.hs
src/Pitboss/FSM/DealerRoundFSM/: ENHC.hs  Existential.hs  JSON.hs  Laws.hs  Peek.hs  Phase.hs  PhaseTag.hs  Transitions.hs  Types.hs
src/Pitboss/FSM/DealerTable/: FSM.hs  Phase.hs  Transition.hs
src/Pitboss/FSM/DealerTableFSM/: Existential.hs  FSM.hs  JSON.hs  Laws.hs  Phase.hs  Transition.hs  Transitions.hs  Types.hs
src/Pitboss/FSM/Game/: ENHC.hs  Peek.hs
src/Pitboss/FSM/Instances/: Transitionable.hs
src/Pitboss/FSM/Player/: Hand.hs  Spot.hs  Table.hs
src/Pitboss/FSM/PlayerHand/: FSM.hs  Phase.hs  Transition.hs
src/Pitboss/FSM/PlayerHandFSM/: Existential.hs  FSM.hs  JSON.hs  Laws.hs  Phase.hs  Transition.hs  Transitions.hs  Types.hs
src/Pitboss/FSM/PlayerSpot/: FSM.hs  Phase.hs  Transition.hs
src/Pitboss/FSM/PlayerSpotFSM/: Existential.hs  FSM.hs  JSON.hs  Laws.hs  Phase.hs  Transition.hs  Transitions.hs  Types.hs
src/Pitboss/FSM/PlayerTable/: FSM.hs  Phase.hs  Transition.hs
src/Pitboss/FSM/PlayerTableFSM/: Existential.hs  FSM.hs  JSON.hs  Laws.hs  Phase.hs  Transition.hs  Transitions.hs  Types.hs
src/Pitboss/FSM/Round/: AtDecisionPoint.hs  ENHC.hs  Peek.hs  PhaseTag.hs
src/Pitboss/FSM/Table/: FSM.hs  Phase.hs  Transition.hs
src/Pitboss/FSM/Types/: Bout.hs  Contestant.hs  Core.hs  Dealer.hs  DealerHand.hs  Player.hs  PlayerHand.hs  Round.hs  Table.hs  Transitionable.hs
src/Pitboss/Intent/: Context.hs  Generate.hs
src/Pitboss/Intent/Generate/: Mistake.hs  Strategy.hs
src/Pitboss/Mechanics/Dealer/: Guards.hs  Transitions.hs  Types.hs
src/Pitboss/Mechanics/Hand/: FSM.hs
src/Pitboss/Mechanics/Player/: Guards.hs  Transitions.hs  Types.hs
src/Pitboss/Mechanics/Round/: FSM.hs
src/Pitboss/Mechanics/Types/: PhaseTag.hs  Transitionable.hs
src/Pitboss/Offering/: Matter.hs  RuleSet.hs
src/Pitboss/Orchestration/: DeltaGen.hs  EventGen.hs
src/Pitboss/Registry/State/: Hand.hs  Round.hs  Spot.hs
src/Pitboss/Registry/Types/: Identifier.hs  Registry.hs
src/Pitboss/Sim/: Event.hs  Types.hs  World.hs
src/Pitboss/Sim/Agency/: Types.hs
src/Pitboss/Sim/Engine/: DeltaGen.hs  Runtime.hs
src/Pitboss/Sim/Event/: Derive.hs
src/Pitboss/Sim/FSM/: DealerActivity.hs  Hand.hs  PlayerActivity.hs  Round.hs
src/Pitboss/Sim/Registry/: Player.hs
src/Pitboss/Sim/State/: Actor.hs  Player.hs  Round.hs  Shoe.hs  Spot.hs  SpotHand.hs  Table.hs  World.hs
src/Pitboss/Sim/Types/: FiniteMap.hs  Identifier.hs  Occupancy.hs
src/Pitboss/Sim/World/: Identifier.hs  Lens.hs  Registry.hs  Relations.hs
src/Pitboss/Simulation/: Event.hs  Types.hs
src/Pitboss/State/: Cache.hs  Registry.hs  Sim.hs  TickCache.hs  Timeline.hs  Trace.hs  Types.hs
src/Pitboss/State/Delta/: Types.hs
src/Pitboss/Strategy/: Integration.hs  Types.hs
src/Pitboss/Trace/: Entity.hs  EntityRegistry.hs  FiniteMap.hs  Registry.hs  Snapshot.hs  Timeline.hs  Types.hs
src/Pitboss/Types/: BoundedEnum.hs  Index.hs
src/Pitboss/World/: Constructors.hs
test/: Main.hs
test/Pitboss/: TestHelpers.hs
test/Pitboss/Integration/: BoutFlowSpec.hs  TimelineSpec.hs
test/Pitboss/Orchestration/: DeltaGenSpec.hs  EventGenSpec.hs
test/Pitboss/Simulation/: IntentToEventSpec.hs
test/Spec/Pitboss/: Helpers.hs  JsonRoundtripSpec.hs  PropertySpec.hs  UidEncodingSpec.hs
test/Test/Pitboss/: Matchers.hs  TestUtils.hs
test/fixtures/: complete-blackjack-game.json  dealer-blackjack-game.json  player-bust-game.json
(+445 files in other folders)
