cabal-version:      3.0
name:               pitboss
version:            0.1.0.0
synopsis:           Pitboss: A Blackjack Toolkit and Simulator
-- description:
license:            AGPL-3.0-only
license-file:       LICENSE
author:             Pitboss
maintainer:         pitboss.sim@gmail.com
-- copyright:
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Pitboss.Blackjack
                      Pitboss.Blackjack.Deck
                      Pitboss.Blackjack.Outcomes
                      Pitboss.Blackjack.Play
                      Pitboss.Blackjack.Rules
                      Pitboss.Blackjack.Rules.Bout
                      Pitboss.Blackjack.Rules.Dealer
                      Pitboss.Blackjack.Rules.Game
                      Pitboss.Blackjack.Rules.Hand
                      Pitboss.Blackjack.Rules.Hand.Witness
                      Pitboss.Blackjack.Rules.Table
                      Pitboss.Blackjack.Rules.Validate
                      Pitboss.Blackjack.Strategy
                      Pitboss.Blackjack.Strategy.Chart
                      Pitboss.Blackjack.Strategy.Chart.Error
                      Pitboss.Blackjack.Strategy.Chart.Interpret
                      Pitboss.Blackjack.Strategy.Chart.Overlay
                      Pitboss.Blackjack.Strategy.Chart.Parse
                      Pitboss.Blackjack.Strategy.Chart.Types
                      Pitboss.Blackjack.Strategy.Chart.Validate
                      Pitboss.Blackjack.Strategy.MultiDimensional
                      Pitboss.Blackjack.Strategy.Types
                      Pitboss.Blackjack.Types
                      Pitboss.Blackjack.Types.Core
                      Pitboss.Blackjack.Types.Core.Bout
                      Pitboss.Blackjack.Types.Core.Card
                      Pitboss.Blackjack.Types.Core.Decision
                      Pitboss.Blackjack.Types.Core.Economy
                      Pitboss.Blackjack.Types.Core.Hand
                      Pitboss.Blackjack.Types.Core.Round
                      Pitboss.Blackjack.Types.GameRuleSet
                      Pitboss.Blackjack.Types.Hand
                      Pitboss.Blackjack.Types.Hand.Witness
                      Pitboss.Blackjack.Types.Offering
                      Pitboss.Blackjack.Types.Table
                      Pitboss.Blackjack.WellKnown
                      Pitboss.Causality
                      Pitboss.Causality.Delta.Incremental
                      Pitboss.Causality.Delta.IncrementalPart
                      Pitboss.Causality.Delta.Reversible
                      Pitboss.Causality.Delta.Types
                      Pitboss.Causality.Entity.Lenses
                      Pitboss.Causality.Entity.Types
                      Pitboss.Causality.Entity.Witnessable
                      Pitboss.Causality.Registry
                      Pitboss.Causality.TickCache
                      Pitboss.Causality.Timeline
                      Pitboss.Causality.Timeline.Query
                      Pitboss.Causality.Timeline.Reconstruction
                      Pitboss.Causality.Trace
                      Pitboss.Causality.Trace.Ops
                      Pitboss.Causality.Trace.Registrable
                      Pitboss.Causality.Trace.Types
                      Pitboss.Causality.Types.Core
                      Pitboss.Causality.Types.FiniteMap
                      Pitboss.Causality.Validate
                      Pitboss.FSM
                      Pitboss.FSM.Bout
                      Pitboss.FSM.Dealer
                      Pitboss.FSM.DealerHand
                      Pitboss.FSM.Player
                      Pitboss.FSM.PlayerHand
                      Pitboss.FSM.Round
                      Pitboss.FSM.Round.AtDecisionPoint
                      Pitboss.FSM.Round.ENHC
                      Pitboss.FSM.Round.Peek
                      Pitboss.FSM.Round.PhaseTag
                      Pitboss.FSM.Table
                      Pitboss.FSM.Transitionable
                      Pitboss.FSM.Types
                      Pitboss.FSM.Types.Bout
                      Pitboss.FSM.Types.Core
                      Pitboss.FSM.Types.Core.Bout
                      Pitboss.FSM.Types.Core.Dealer
                      Pitboss.FSM.Types.Core.DealerHand
                      Pitboss.FSM.Types.Core.Player
                      Pitboss.FSM.Types.Core.PlayerHand
                      Pitboss.FSM.Types.Core.Round
                      Pitboss.FSM.Types.Core.Table
                      Pitboss.FSM.Types.Dealer
                      Pitboss.FSM.Types.DealerHand
                      Pitboss.FSM.Types.Player
                      Pitboss.FSM.Types.PlayerHand
                      Pitboss.FSM.Types.Round
                      Pitboss.FSM.Types.Table
                      Pitboss.Simulation.Agents.Dealer
                      Pitboss.Simulation.Agents.Player.Advantage
                      Pitboss.Simulation.Agents.Player.Basic
                      Pitboss.Simulation.Agents.Player.Perfect
                      Pitboss.Simulation.Agents.Player.Superstitious
                      Pitboss.Simulation.Agents.Types
                      Pitboss.Simulation.Delta.Bout
                      Pitboss.Simulation.Delta.Dealer
                      Pitboss.Simulation.Delta.Economy
                      Pitboss.Simulation.Delta.Generate
                      Pitboss.Simulation.Engine.Generate
                      Pitboss.Simulation.Engine.Runtime
                      Pitboss.Simulation.Event
                      Pitboss.Simulation.Event.Generate
                      Pitboss.Simulation.Intent.Context.Types.Core
                      Pitboss.Simulation.Intent.Generate
                      Pitboss.Simulation.Intent.Types
                      Pitboss.Simulation.Intent.Validate
                      Pitboss.Simulation.Types
    -- other-modules:
    -- other-extensions:
    build-depends:    base,
                      aeson,
                      aeson-pretty,
                      array,
                      containers,
                      hashable,
                      insert-ordered-containers,
                      lens,
                      mtl,
                      random,
                      text,
    hs-source-dirs:   src
    default-language: GHC2021

executable pitboss
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base,
        pitboss,

    hs-source-dirs:   app
    default-language: GHC2021

test-suite pitboss-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base,
                      pitboss,
