cabal-version:      3.0
name:               pitboss
version:            0.1.0.0
synopsis:           Pitboss: A Blackjack Toolkit and Simulator
-- description:
license:            AGPL-3.0-only
license-file:       LICENSE
author:             Pitboss
maintainer:         pitboss.sim@gmail.com
-- copyright:
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options:      -Wall -fhpc

library
    import:           warnings
    exposed-modules:  Pitboss.Blackjack
                      Pitboss.Blackjack.Actions
                      Pitboss.Blackjack.Deck
                      Pitboss.Blackjack.Outcomes
                      Pitboss.Blackjack.Play
                      Pitboss.Blackjack.Rules
                      Pitboss.Blackjack.Rules.Game
                      Pitboss.Blackjack.Rules.Offering
                      Pitboss.Blackjack.Rules.Table
                      Pitboss.Blackjack.Strategy.Chart
                      Pitboss.Blackjack.Strategy.Chart.Error
                      Pitboss.Blackjack.Strategy.Chart.Interpret
                      Pitboss.Blackjack.Strategy.Chart.Overlay
                      Pitboss.Blackjack.Strategy.Chart.Parse
                      Pitboss.Blackjack.Strategy.Chart.Types
                      Pitboss.Blackjack.Strategy.Chart.Validate
                      Pitboss.Blackjack.Strategy.Types
                      Pitboss.Blackjack.Types
                      Pitboss.Blackjack.Types.Core
                      Pitboss.Blackjack.WellKnown
                      Pitboss.Causality
                      Pitboss.Causality.Delta.Incremental
                      Pitboss.Causality.Delta.Reversible
                      Pitboss.Causality.Delta.Types
                      Pitboss.Causality.Entity.Decomposable
                      Pitboss.Causality.Entity.Lenses
                      Pitboss.Causality.Entity.Replaceable
                      Pitboss.Causality.Entity.Types
                      Pitboss.Causality.Entity.Witnessable
                      Pitboss.Causality.Registry
                      Pitboss.Causality.TickCache
                      Pitboss.Causality.Timeline
                      Pitboss.Causality.Timeline.Query
                      Pitboss.Causality.Timeline.Reconstruction
                      Pitboss.Causality.Trace
                      Pitboss.Causality.Trace.Ops
                      Pitboss.Causality.Trace.Registrable
                      Pitboss.Causality.Trace.Types
                      Pitboss.Causality.Types.Core
                      Pitboss.Causality.Types.FiniteMap
                      Pitboss.FSM
                      Pitboss.FSM.Bout
                      Pitboss.FSM.Dealer.Hand
                      Pitboss.FSM.Dealer.Round
                      Pitboss.FSM.Dealer.Round.ENHC
                      Pitboss.FSM.Dealer.Round.Peek
                      Pitboss.FSM.Dealer.Round.Phase
                      Pitboss.FSM.Dealer.Round.AtDecisionPoint
                      Pitboss.FSM.Dealer.Round.PhaseTag
                      Pitboss.FSM.Dealer.Table
                      Pitboss.FSM.Player.Hand
                      Pitboss.FSM.Player.Spot
                      Pitboss.FSM.Player.Table
                      Pitboss.FSM.Table
                      Pitboss.FSM.Transitionable
                      Pitboss.FSM.Types
                      Pitboss.Simulation
                      Pitboss.Simulation.Agents.Dealer
                      Pitboss.Simulation.Agents.Player.Advantage
                      Pitboss.Simulation.Agents.Player.Basic
                      Pitboss.Simulation.Agents.Player.Perfect
                      Pitboss.Simulation.Agents.Player.Superstitious
                      Pitboss.Simulation.Agents.Types
                      Pitboss.Simulation.Engine.DeltaGen
                      Pitboss.Simulation.Engine.Runtime
                      Pitboss.Simulation.Event
                      Pitboss.Simulation.Intent.Generate
                      Pitboss.Simulation.Intent.Types
                      Pitboss.Simulation.Intent.Validate
                      Pitboss.Simulation.Types
    -- other-modules:
    -- other-extensions:
    build-depends:    base,
                      aeson,
                      aeson-pretty,
                      array,
                      containers,
                      hashable,
                      insert-ordered-containers,
                      lens,
                      mtl,
                      random,
                      text,
    hs-source-dirs:   src
    default-language: GHC2021

executable pitboss
    ghc-options:      -fhpc
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base,
        pitboss,

    hs-source-dirs:   app
    default-language: GHC2021

test-suite pitboss-test
    ghc-options:      -fhpc
    default-language: GHC2021
    other-modules:    Pitboss.TestHelpers
                      Pitboss.Integration.BoutFlowSpec
                      Pitboss.Integration.TimelineSpec
                      Pitboss.Orchestration.DeltaGenSpec
                      Pitboss.Simulation.IntentToEventSpec
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base,
        insert-ordered-containers,
        lens,
        mtl,
        hspec,
        pitboss,
        random,
        text,
    build-tool-depends:
        hspec-discover:hspec-discover
