cabal-version:      3.0
name:               pitboss
version:            0.1.0.0
synopsis:           Pitboss: A Blackjack Toolkit and Simulator
-- description:
license:            AGPL-3.0-only
license-file:       LICENSE
author:             Pitboss
maintainer:         pitboss.sim@gmail.com
-- copyright:
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Pitboss.Blackjack.Deck
                      Pitboss.Blackjack.Outcomes
                      Pitboss.Blackjack.Play
                      Pitboss.Blackjack.Rules
                      Pitboss.Blackjack.Rules.Bout
                      Pitboss.Blackjack.Rules.Dealer
                      Pitboss.Blackjack.Rules.Game
                      Pitboss.Blackjack.Rules.Hand
                      Pitboss.Blackjack.Rules.Hand.Witness
                      Pitboss.Blackjack.Rules.Table
                      Pitboss.Blackjack.Rules.Validate
                      Pitboss.Blackjack.Strategy
                      Pitboss.Blackjack.Strategy.Chart
                      Pitboss.Blackjack.Strategy.Chart.Error
                      Pitboss.Blackjack.Strategy.Chart.Interpret
                      Pitboss.Blackjack.Strategy.Chart.Overlay
                      Pitboss.Blackjack.Strategy.Chart.Parse
                      Pitboss.Blackjack.Strategy.Chart.Types
                      Pitboss.Blackjack.Strategy.Chart.Validate
                      Pitboss.Blackjack.Strategy.MultiDimensional
                      Pitboss.Blackjack.Strategy.Types
                      Pitboss.Blackjack.Types
                      Pitboss.Blackjack.Types.Core
                      Pitboss.Blackjack.Types.Core.Bout
                      Pitboss.Blackjack.Types.Core.Card
                      Pitboss.Blackjack.Types.Core.Decision
                      Pitboss.Blackjack.Types.Core.Economy
                      Pitboss.Blackjack.Types.Core.Hand
                      Pitboss.Blackjack.Types.Core.Round
                      Pitboss.Blackjack.Types.GameRuleSet
                      Pitboss.Blackjack.Types.Hand
                      Pitboss.Blackjack.Types.Hand.Witness
                      Pitboss.Blackjack.Types.Offering
                      Pitboss.Blackjack.Types.Table
                      Pitboss.Blackjack.WellKnown
    -- other-modules:
    -- other-extensions:
    build-depends:    base,
                      aeson,
                      aeson-pretty,
                      array,
                      containers,
                      random,
                      text,
    hs-source-dirs:   src
    default-language: GHC2021

executable pitboss
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base,
        pitboss,

    hs-source-dirs:   app
    default-language: GHC2021

test-suite pitboss-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base,
                      pitboss,
